--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,12 @@ exclude:
 
 prose:
   rooturl: '_posts'
-  siteurl: 'http://chbiker.github.io/'
+  siteurl: 'http://chbiker.github.io'
   metadata:
     _posts:
       - name: "layout"
         field:
+          label: "Layout"
           element: "text"
           value: "post"
       - name: "tags"
